--- a/notebooks/analysis/mass_ratio_proxy/MassRatioProxy_Obs.ipynb
+++ b/notebooks/analysis/mass_ratio_proxy/MassRatioProxy_Obs.ipynb
@@ -36,8 +36,7 @@
     "from adjustText import adjust_text\n",
     "\n",
     "# Physics-related Packages\n",
-    "from astropy.cosmology import Planck15\n",
-    "from astropy.wcs import WCS"
+    "from astropy.cosmology import Planck15"
    ]
   },
   {
