--- a/notebooks/plot/case_study_plot.ipynb
+++ b/notebooks/plot/case_study_plot.ipynb
@@ -120,7 +120,7 @@
     "fig, axes = plt.subplots(1, 3, figsize=(15, 4), sharey=False)\n",
     "\n",
     "# g magnitude\n",
-    "axes[0].hist(g_all, bins=20, alpha=0.7, label=\"g_all\",\n",
+    "axes[0].hist(g_all, bins=20, alpha=0.7, label=\"g_photoz\",\n",
     "             weights=np.ones_like(g_all)/len(g_all), histtype='step',color=\"#4c72b0\")\n",
     "axes[0].hist(g_specz, bins=20, alpha=0.7, label=\"g_specz\",\n",
     "             weights=np.ones_like(g_specz)/len(g_specz), histtype='step',  color=\"#dd8452\")\n",
@@ -130,7 +130,7 @@
     "#axes[0].set_title(\"(a)\", loc=\"center\", pad=-10)\n",
     "\n",
     "# u magnitude\n",
-    "axes[1].hist(u_all, bins=20, alpha=0.7, label=\"u_all\",\n",
+    "axes[1].hist(u_all, bins=20, alpha=0.7, label=\"u_photoz\",\n",
     "             weights=np.ones_like(u_all)/len(u_all), histtype='step', color=\"#4c72b0\")\n",
     "axes[1].hist(u_specz, bins=20, alpha=0.7, label=\"u_specz\",\n",
     "             weights=np.ones_like(u_specz)/len(u_specz), histtype='step',  color=\"#dd8452\")\n",
@@ -139,7 +139,7 @@
     "#axes[1].set_title(\"(b)\", loc=\"center\", pad=-10)\n",
     "\n",
     "# u-g color\n",
-    "axes[2].hist(ug_all, bins=20, alpha=0.7, label=\"u-g_all\",\n",
+    "axes[2].hist(ug_all, bins=20, alpha=0.7, label=\"u-g_photoz\",\n",
     "             weights=np.ones_like(ug_all)/len(ug_all), histtype='step', color=\"#4c72b0\")\n",
     "axes[2].hist(ug_specz, bins=20, alpha=0.7, label=\"u-g_specz\",\n",
     "             weights=np.ones_like(ug_specz)/len(ug_specz), histtype='step',  color=\"#dd8452\")\n",
