--- a/notebooks/analysis/photometric_indicators/blue_frac.ipynb
+++ b/notebooks/analysis/photometric_indicators/blue_frac.ipynb
@@ -80,13 +80,7 @@
     "# Sim Box parameters\n",
     "Snap_Index = 99 # the snapshots index in the total 100 snapshots taking at different z\n",
     "BoxSize = sim['boxsize'] # unit: ckpc/h\n",
-    "Redshift = snaps[Snap_Index]['redshift'] # current redshift of our current snap\n",
-    "\n",
-    "# Short description of cosmological parameters Planck2015\n",
-    "h_atz = cosmo.H(Redshift).value/100 # unit 100km/[s*Mpc]\n",
-    "\n",
-    "LowerMass_lim = 10**3 * h_atz # units 10^ 10 𝑀⊙/ℎ * h\n",
-    "HigherMass_lim = 10**8 * h_atz # units 10^ 10 𝑀⊙/ℎ * h"
+    "Redshift = snaps[Snap_Index]['redshift'] # current redshift of our current snap"
    ]
   },
   {
