--- a/notebooks/data_generation/Main_BCG_Cal.ipynb
+++ b/notebooks/data_generation/Main_BCG_Cal.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "def Get_Regions(redshift, halo_index):\n",
     "    z       = redshift\n",
-    "    R_phys  = Group_R_Crit500[halo_index]/(factor_a*sim_info['hubble']) * u.kpc \n",
+    "    R_phys  = Group_R_Crit500[halo_index]*factor_a/(sim_info['hubble']) * u.kpc \n",
     "    center  = SkyCoord(0*u.deg, 0*u.deg, frame=\"icrs\")\n",
     "    DA      = cosmo.angular_diameter_distance(z)  \n",
     "    theta   = (R_phys / DA).to(u.dimensionless_unscaled) * u.rad\n",
@@ -267,13 +267,13 @@
     "    \n",
     "    H, xe, ye = np.histogram2d(x, y, bins=nbins,\n",
     "                               weights=Masses)\n",
-    "    # H 单位：Msun/h\n",
+    "    # H unit：Msun/h\n",
     "\n",
-    "    # -------------------- 绘图 --------------------\n",
+    "    # -------------------- plot --------------------\n",
     "    fig, ax = plt.subplots(figsize=(5, 5))\n",
     "    norm = LogNorm() if log_norm else None\n",
     "\n",
-    "    im = ax.imshow(H.T,          # 注意转置\n",
+    "    im = ax.imshow(H.T,         \n",
     "                   origin='lower',\n",
     "                   norm=norm,\n",
     "                   cmap='inferno',\n",
