--- a/notebooks/data_generation/Snap2SN.ipynb
+++ b/notebooks/data_generation/Snap2SN.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "523e8c72-7142-4e73-a816-5529ff8f5156",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "DM_Particle_Mass = sim['mass_dm'] # unit: 10^10 M_{sun}/h, mass for a single DM particle\n",
     "\n",
     "# Short description of cosmological parameters Planck2015\n",
-    "h_atz = cosmo.H(Redshift).value/100 # unit 100km/[s*Mpc]\n",
+    "h_at0 = cosmo.h\n",
     "a_atz = 1/(1+Redshift)"
    ]
   },
@@ -128,9 +128,9 @@
     "# Convert meters to kiloparsecs (kpc)\n",
     "meters_to_kpc = ((1 * u.m).to(u.kpc)).value\n",
     "\n",
-    "kpc_to_ckpcperh = h_atz/a_atz\n",
+    "kpc_to_ckpcperh = h_at0/a_atz\n",
     "\n",
-    "M_to_e10Mperh = h_atz*1e-10"
+    "M_to_e10Mperh = h_at0*1e-10"
    ]
   },
   {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "08fb0de2-afa2-4bcb-a24c-9a5ee6a17a59",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
     "    halo_id = FOF_Halo_IDs[i]\n",
     "    halo_pos = GroupPos[i]\n",
     "    halo_r = Group_R_Crit200[i]\n",
-    "    halo_m = Group_M_Crit200[i]/h_atz # unit 10^10 solar masses\n",
+    "    halo_m = Group_M_Crit200[i]/h_at0 # unit 10^10 solar masses\n",
     "    \n",
     "    n_gal_arcmin2 = 20* (5*1e+4/halo_m)**2\n",
     "\n",
