--- a/notebooks/data_generation/sort_groupcat.ipynb
+++ b/notebooks/data_generation/sort_groupcat.ipynb
@@ -101,13 +101,11 @@
     "Redshift = snaps[Snap_Index]['redshift'] # current redshift of our current snap\n",
     "\n",
     "# Short description of cosmological parameters Planck2015\n",
-    "h_atz = Planck15.H(Redshift).value/100 # unit 100km/[s*Mpc]\n",
+    "h_at0 = Planck15.h \n",
     "\n",
     "# h should be h_0, but it does not make a difference, so I don't change the codes here\n",
-    "LowerMass_lim = 10**3 * h_atz # units 10^ 10 𝑀⊙/h\n",
-    "HigherMass_lim = 10**10 * h_atz # units 10^ 10 𝑀⊙/h\n",
-    "\n",
-    "print(h_atz)"
+    "LowerMass_lim = 10**3 * h_at0 # units 10^ 10 𝑀⊙/h\n",
+    "HigherMass_lim = 10**10 * h_at0 # units 10^ 10 𝑀⊙/h"
    ]
   },
   {
@@ -543,8 +541,11 @@
     "            print('num_subhalo_thiscat',num_subhalo_thiscat)\n",
     "            Centersub_Masses = np.array(get_centersub(FOF_Halo_IDs, SubhaloGrNr, SubhaloMass)[1])\n",
     "    \n",
-    "            TargetHalo_inCurrentChunk = np.array(np.where((Centersub_Masses >= LowerMass_lim) & \n",
-    "                           (Centersub_Masses <= HigherMass_lim))[0])\n",
+    "            #TargetHalo_inCurrentChunk = np.array(np.where((Centersub_Masses >= LowerMass_lim) & \n",
+    "            #               (Centersub_Masses <= HigherMass_lim))[0])\n",
+    "\n",
+    "            TargetHalo_inCurrentChunk = np.array(np.where((Group_M_Crit200 >= LowerMass_lim) & \n",
+    "                           (Group_M_Crit200 <= HigherMass_lim))[0])\n",
     "    \n",
     "            print(TargetHalo_inCurrentChunk)\n",
     "    \n",
@@ -762,7 +763,7 @@
     "    format='%(asctime)s - %(levelname)s - %(message)s',\n",
     "    datefmt='%Y-%m-%d %H:%M:%S'\n",
     ")\n",
-    "sub_prog_url = \"http://www.illustris-project.org/api/Illustris-3/snapshots/85/subhalos/185/\"\n",
+    "\n",
     "# Get the total number of chunks. Chunk index starts from 0 \n",
     "# num_chunks = sim['num_files_snapshot']\n",
     "num_chunks = 600\n",
