--- a/notebooks/plot/aperture_mass_maps.ipynb
+++ b/notebooks/plot/aperture_mass_maps.ipynb
@@ -67,10 +67,10 @@
     "Redshift = snaps[Snap_Index]['redshift'] # current redshift of our current snap\n",
     "\n",
     "# Short description of cosmological parameters Planck2015\n",
-    "h_atz = cosmo.H(Redshift).value/100 # unit 100km/[s*Mpc]\n",
+    "h_at0 = cosmo.h\n",
     "\n",
-    "LowerMass_lim = 10**3 * h_atz # units 10^ 10 𝑀⊙/ℎ * h\n",
-    "HigherMass_lim = 10**8 * h_atz # units 10^ 10 𝑀⊙/ℎ * h"
+    "LowerMass_lim = 10**3 * h_at0 # units 10^ 10 𝑀⊙/ℎ * h\n",
+    "HigherMass_lim = 10**8 * h_at0 # units 10^ 10 𝑀⊙/ℎ * h"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm_mass= get('http://www.tng-project.org/api/TNG300-1/')['mass_dm']/h_atz * 1e+10"
+    "dm_mass= get('http://www.tng-project.org/api/TNG300-1/')['mass_dm']/h_at0 * 1e+10"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_name_300 = '/users_path/merger_trace/data/tng300/tng300_targetcat/TargetHalo_MergerCat_092.hdf5'"
+    "cat_name_300 = '/home/chuiyang/merger_trace/data/tng300/tng300_targetcat/TargetHalo_MergerCat_092.hdf5'"
    ]
   },
   {
@@ -258,7 +258,7 @@
     "    dm_pos = f['PartType1/Coordinates'][:]  # shape: (N, 3)\n",
     "\n",
     "    gas_pos = f['PartType0/Coordinates'][:]\n",
-    "    gas_mass = f['PartType0/Masses'][:]/h_atz * 1e10\n",
+    "    gas_mass = f['PartType0/Masses'][:]/h_at0 * 1e10\n",
     "\n",
     "\n",
     "x1 = dm_pos[:, 0]\n",
